# ii-agent

./: .gitignore  BOUNDARIES_FIELD_V1.md  CONTRIBUTING.md  FORM_OF_ARRIVAL.md  POSTURE_OF_ARRIVAL.md  README.md  RELEASE_NOTES.md  STABILIZATION.md  VITALS.md  __init__.py  acknowledgements.md  hollow-vessel-handshake.md  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  zz_MISC_CANDIDATES.md
.github/: CODEOWNERS
agents/: __init__.py  governance_decision_adapter.py  otherpowers_goverened_agent.py
agents/expression_gradient/: __init__.py
docs/: BOUNDARIES_FIELD_V1.md  CONTRACTS.md  Collective_Resonance.md  CommonGround_Practice_Reading.md  FIELD_PHENOMENOLOGY.md  Field_Expansion.md  INVARIANTS.md  On_Presence_and_Relation.md  POSTURE.md  REPO_INVARIANTS.md  WHY.md
docs/adr/: 0001-formations-are-an-overlay.md  001-posture.md  002-stasis-and-refusal.md  003-append-only-lineage.md
examples/: __init__ .py
field_attunement/: field.py  silence.py  spore.py
otherpowers_governance/: README.md  __init__.py  formation_validator.py  registry.py
otherpowers_governance/architecture/: formations.py
otherpowers_governance/articulation/: AMBER_RESONANCE.md  CONSENSUAL_APERTURE.md  FIELD_DYNAMICS.md  PULSE_RITUAL.md  README.md  surface_v1.md
otherpowers_governance/core/: __init__.py  inspirational_lineage.py  legibility.py  lineage.py
otherpowers_governance/governance/: __init__.py  invariant_enforcement.py  policy.py  renegotiation.py  resonance_tuning.py  stasis.py  vows.py
otherpowers_governance/intelligence/: FieldAttuner.py  __init__.py  architecture.md  (+7 more)
scripts/: smoke_install.py  smoke_signals_api_contract.py  test_emission_boundary_contract.py  test_influence_spine_caller_smoke copy.py  test_influence_spine_emission_boundary_contract.py  test_influence_spine_interface_contract.py  test_influence_spine_positive_emission_smoke.py  test_influence_spine_posture_memory_smoke.py  test_influence_spine_volatility_guard_smoke.py  test_posture_accumulator_smoke.py  test_signal_router_smoke.py
src/: App.tsx  index.css
tending/: __init__.py  field_expression.py  field_state.py  pulse.py  sensing_lattice.py
(+109 files in other folders)
