[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "otherpowers-ii-agent"
version = "0.1.0"
description = "Local-first, non-coercive intelligence attunement layer"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["otherpowers_governance*", "field_attunement*"]
